--- a/sdtp/Site1.Master
+++ b/sdtp/Site1.Master
@@ -165,12 +165,7 @@
       </div>
     </div>
   </div>
-
-  
-
-
-
-          <!-- ***** Main Content Placeholder ***** -->
+          <!-- ***** Main Content Placeholder  ***** -->
 
         <div>
              <asp:ContentPlaceHolder ID="ContentPlaceHolder1" runat="server">
@@ -183,7 +178,7 @@
         <footer>
     <div class="container">
       <div class="col-lg-8">
-        <p>Copyright © 2024 SVR Agency Co., Ltd. All rights reserved. </p>
+        <p>Copyright © 2024 HOSTELSCo,Ltd. All rights reserved. </p>
       </div>
     </div>
   </footer>
